tests/resources/AcmeTest/Web/Mvc/resources/view/syntaxerror/error.php
<?php
//echo 'aa';
syntaxerror
//$this->escape('aa');